# SDiZO_Projekt_1

./: BSTImpl.cpp  BSTImpl.h  CMakeLists.txt  FileData.cpp  FileData.h  HeapImpl.cpp  HeapImpl.h  ListImpl.cpp  ListImpl.h  Menu.cpp  Menu.h  RBTImpl.cpp  RBTImpl.h  README.md  TableImpl.cpp  TableImpl.h  Tests.cpp  Tests.h  main.cpp
